# let-it-flow

./: .env.example  .gitignore  .npmrc  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
.cursor/rules/: git-push-fallback.mdc
.github/workflows/: release.yml
backend/: pyproject.toml
docs/: 00-platform-positioning.md  01-overview.md  02-architecture.md  03-dag-schema.md  04-tool-protocol.md  05-kb-mcp-protocol.md  06-planner-and-templates.md  07-executor.md  08-task-streaming.md  09-milestones-and-todolist.md  10-litpilot-migration-guide.md  11-benchmark-and-eval.md  12-hitl-and-control.md  13-p8-config-and-observability.md  14-podcast-generator-frontend.md  15-harness-engineering.md  16-nexusops.md  17-skill-sedimentation.md  18-test-reorg-plan.md  19-test-coverage-plan.md  20-narrative-output-rules.md  21-streaming-ui-guidelines.md  22-upstream-migration-plan.md  23-conversational-quality-layers.md  24-conversational-streaming-style.md  25-platform-streaming-improvement-proposal.md  26-meso-packages-extension-requirements.md  REFERENCE-MANIFEST.md
reference/: deploy.defaults.reference.json  pyproject.reference.toml
scripts/: check-narrate-config.ts  diagnose-compatmode.ts  diagnose-kpi-shortcircuit.ts  diagnose-nexus-steps.ts  diagnose-stopwhen.ts  full-test.ts  start-aicf.ts  test-kpi-impact.ts  test-mestar-resolve.ts  test-resolver-hitrate.ts
src/: index.ts  runtime.ts  server.ts
web/: index.html  package.json  vite.config.ts
(+470 files in other folders)
